--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 lxml==5.2.2
+matplotlib==3.9.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
