--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ multitasking==0.0.11
 numpy==2.0.1
 packaging==24.1
 pandas==2.2.2
-pandas-ta==0.3.14b
+ta-lib==0.4.0
 peewee==3.17.6
 pillow==10.4.0
 platformdirs==4.2.2
